# deepin-media-player

./: README  README~  clear.py  clear.sh  clear.sh~  deepin-media-player.desktop  repos.sh  安装说明  安装说明~
locale/: ar.po  ar_AA.po  ar_EG.po  ar_SA.po  ar_SY.po  cs.po  da.po  de.po  de_AT.po  de_DE.po  deepin-media-player.pot  en_AU.po  en_US.po  es.po  es_CL.po  es_ES.po  es_MX.po  es_PY.po  es_VE.po  fi.po  fr.po  hu.po  hy.po  hy_AM.po  id_ID.po  it.po  ja.po  nl.po  nl_NL.po  pl_PL.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sk_SK.po  sl.po  sv_SE.po  ug.po  vi.po  (+6 more)
src/:  功夫熊猫  .#control_panel.py  .#main.py  .#screen.py  .media_player.py.swp  .media_player_function.py.swp  .media_player_keys.py.swp  .media_player_menus.py.swp  .media_service.py.swp  .mplayer.py.swp  .player_box.py.swp  .test.py.swp  2.py  ImageButton.py  \  bottom_toolbar.py  bottomhbox.py  buffer.py  cdrom.py  code_to_utf_8.py  code_to_utf_8.py~  combox.py  config.ini  config.ini~  configure.py  configure_gui.py  constant.py  control_panel.py  deepin-media-player.py  deepin-media-player.sh  deepin-media-player.sh~  demo.py  dialog.py  drag.py  find_as.py  gio_format.py  gui.py  ini.py  ini.py~  ini_gui.py  (+77 more)
src/presets/: GstFaac.prs  GstLameMP3Enc.prs  GstTheoraEnc.prs  GstVP8Enc.prs  GstVorbisEnc.prs  GstXvidEnc.prs  Makefile.am  Makefile.in  README  ffenc_aac.prs  ffenc_ac3.prs  ffenc_flv.prs  ffenc_h263p.prs  ffenc_mpeg4.prs
src/profiles/: Makefile.am  Makefile.in  g1.xml  html5webm.xml  ipod.xml  krzr-k1v.xml  linux-computer.xml  n770.xml  n800.xml  n900.xml  ps3.xml  psp.xml
src/widget/: \  (+30 more)
(+345 files in other folders)
