
presetdir = $(datadir)/transmageddon/presets
preset_DATA = ffenc_ac3.prs GstFaac.prs GstVorbisEnc.prs \
              ffenc_flv.prs GstLameMP3Enc.prs \
              ffenc_h263p.prs GstXvidEnc.prs \
              ffenc_mpeg4.prs GstTheoraEnc.prs \
              ffenc_aac.prs GstVP8Enc.prs

EXTRA_DIST = ffenc_ac3.prs GstFaac.prs GstVorbisEnc.prs \
             ffenc_flv.prs GstLameMP3Enc.prs \
             ffenc_h263p.prs GstXvidEnc.prs \
             ffenc_mpeg4.prs GstTheoraEnc.prs \
             ffenc_aac.prs GstVP8Enc.prs
