
presetdir = $(datadir)/transmageddon/profiles
preset_DATA = ipod.xml ps3.xml linux-computer.xml n800.xml krzr-k1v.xml \
              n770.xml n900.xml g1.xml html5webm.xml

EXTRA_DIST = ipod.xml ps3.xml linux-computer.xml n800.xml krzr-k1v.xml \
             n770.xml n900.xml psp.xml g1.xml html5webm.xml
